--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/man.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -104,14 +104,15 @@
         </a>
         <a href="https://github.com/diyarfaraj" target="_blank">
           <i class="fab fa-github fa-2x"></i>
-    <!--     </a>
-          <a
-          style="font-size: x-large"
-          href="https://dev.to/diyarfaraj"
-          target="_blank"
-        >
-          Blog
-        </a>  -->
+      </div>
+
+      <div class="certs" style="margin-top: 20px;">
+        <a href="https://www.credly.com/badges/749dd063-46a2-4626-964f-e14cc2bbf69d/public_url" target="_blank">
+          <img src="img/az900.png" style="height: 100px;">
+        </a>
+        <a href="https://www.credly.com/badges/2e3c2352-746a-4af1-a9b7-4c6c1701b5fa/public_url" target="_blank">
+          <img src="img/aws-practitioner.png" style="height: 100px;">
+        </a>
       </div>
     </main>
 
