--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
             <div class="contact-links typing-output">
               <a href="https://www.linkedin.com/in/diyar-faraj/" target="_blank" rel="noopener noreferrer" class="contact-tag" aria-label="LinkedIn profile">[LinkedIn]</a>
               <a href="https://github.com/diyarfaraj" target="_blank" rel="noopener noreferrer" class="contact-tag" aria-label="GitHub profile">[GitHub]</a>
-              <a href="mailto:diyar@diyarfaraj.com" class="contact-tag" aria-label="Email">[Email]</a>
+              <a href="mailto:diyar.faraj@gmail.com" class="contact-tag" aria-label="Email">[Email]</a>
             </div>
           </section>
         </div>
